--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for MooseX-CascadeClearing
 
+0.02    Thu Sep 17 08:30:27 PDT 2009
+- dial back our Moose req to 0.88; we don't strictly need 0.90 and 0.88 is
+  available in Fedora 11 at the moment
+- same with namespace::autoclean (0.09 back to 0.08)
+
 0.01    Wed Sep 16 23:01:01 PDT 2009
 - First version, released on an unsuspecting world
 
