--- a/README
+++ b/README
@@ -2,7 +2,8 @@ NAME
     MooseX::CascadeClearing - Cascade clearer actions across attributes
 
 VERSION
-    Version 0.02
+    This document describes version 0.05 of MooseX::CascadeClearing -
+    released September 15, 2012 as part of MooseX-CascadeClearing.
 
 SYNOPSIS
         use Moose;
@@ -15,11 +16,14 @@ SYNOPSIS
             is_clear_master => 1,
         );
 
-        my @opts = (
-            is => 'ro', isa => 'Str', clear_master => 'master', lazy_build => 1,
+        my @opts => (
+            is           => 'ro',
+            isa          => 'Str',
+            clear_master => 'master',
+            lazy_build   => 1,
         );
 
-        has sub1 => @opts; 
+        has sub1 => @opts;
         has sub2 => @opts;
         has sub3 => @opts;
 
@@ -28,7 +32,7 @@ SYNOPSIS
         sub _build_sub3 { shift->master . "3" }
 
         sub some_sub {
-            # ... 
+            # ...
 
             # clear master, sub[123] in one fell swoop
             $self->clear_master;
@@ -38,7 +42,7 @@ SYNOPSIS
 DESCRIPTION
     MooseX::CascadeClearing does the necessary metaclass fiddling to allow
     an clearing one attribute to be cascaded through to other attributes as
-    well, calling their clearers.
+    well, calling their clear accessors.
 
     The intended purpose of this is to assist in situations where the value
     of one attribute is derived from the value of another attribute -- say a
@@ -57,78 +61,38 @@ CAVEAT
 
 ATTRIBUTE OPTIONS
     We install an attribute metaclass trait that provides two additional
-    atttribute options, as well as wraps the generated clearer method for a
-    designated "master" attribute. By default, use'ing this module causes
-    this trait to be installed for all attributes in the package.
+    attribute options, as well as wraps the generated clearer method for a
+    designated "master" attribute. By default, using this module causes this
+    trait to be installed for all attributes in the package.
 
     is_clear_master => (0|1)
         If set to 1, we wrap this attribute's clearer with a sub that looks
         for other attributes to clear.
 
-    clear_master => Str
+    clear_master => < attribute_name >
         Marks this attribute as one that should be cleared when the named
         attribute's clearer is called. Note that no checking is done to
         ensure that the named master is actually an attribute in the class.
 
-AUTHOR
-    Chris Weyl, "<cweyl at alumni.drew.edu>"
+SOURCE
+    The development version is on github at
+    <http://github.com/RsrchBoy/moosex-cascadeclearing> and may be cloned
+    from <git://github.com/RsrchBoy/moosex-cascadeclearing.git>
 
 BUGS
-    Please report any bugs or feature requests to
-    "bug-moosex-cascadeclearing at rt.cpan.org", or through the web
-    interface at
-    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=MooseX-CascadeClearing>.
-    I will be notified, and then you'llautomatically be notified of progress
-    on your bug as I make changes.
+    Please report any bugs or feature requests on the bugtracker website
+    https://github.com/RsrchBoy/moosex-cascadeclearing/issues
 
-SUPPORT
-    You can find documentation for this module with the perldoc command.
+    When submitting a bug or request, please include a test-file or a patch
+    to an existing test-file that illustrates the bug or desired feature.
 
-        perldoc MooseX::CascadeClearing
+AUTHOR
+    Chris Weyl <cweyl@alumni.drew.edu>
 
-    You can also look for information at:
+COPYRIGHT AND LICENSE
+    This software is Copyright (c) 2012 by Chris Weyl.
 
-    *   RT: CPAN's request tracker
+    This is free software, licensed under:
 
-        <http://rt.cpan.org/NoAuth/Bugs.html?Dist=MooseX-CascadeClearing>
-
-    *   AnnoCPAN: Annotated CPAN documentation
-
-        <http://annocpan.org/dist/MooseX-CascadeClearing>
-
-    *   CPAN Ratings
-
-        <http://cpanratings.perl.org/d/MooseX-CascadeClearing>
-
-    *   Search CPAN
-
-        <http://search.cpan.org/dist/MooseX-CascadeClearing/>
-
-ACKNOWLEDGEMENTS
-    MooseX::AlwaysCoerce, for inspiring me to do this in a slightly more
-    sane fashion than I was previously.
-
-    And of course the Moose team, who have made my life significantly easier
-    (and more fun!) since 0.17 :)
-
-COPYRIGHT & LICENSE
-    Copyright (c) 2009, Chris Weyl "<cweyl@alumni.drew.edu>".
-
-    This library is free software; you can redistribute it and/or modify it
-    under the terms of the GNU Lesser General Public License as published by
-    the Free Software Foundation; either version 2.1 of the License, or (at
-    your option) any later version.
-
-    This library is distributed in the hope that it will be useful, but
-    WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS OR A PARTICULAR PURPOSE.
-
-    See the GNU Lesser General Public License for more details.
-
-    You should have received a copy of the GNU Lesser General Public License
-    along with this library; if not, write to the
-
-        Free Software Foundation, Inc., 
-        59 Temple Place, Suite 330, 
-        Boston, MA  02111-1307 USA
+      The GNU Lesser General Public License, Version 2.1, February 1999
 
